<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ViewHabit.ViewHabitTabsBase">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/percentValue"
            android:layout_width="137dp"
            android:layout_height="33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="35dp"
            android:text="0%"
            android:textSize="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/delete_button_tabs"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="4dp"
        android:background="#00000000"
        android:text="DELETE"
        android:textColor="#6200EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ConfirmEdit"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:background="#00000000"
        android:text="Confirm Edit"
        android:textColor="#6200EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/recordPager"
        android:layout_width="411dp"
        android:layout_height="554dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recordTabs"
        app:layout_constraintVertical_bias="0.117" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/recordTabs"
        android:layout_width="405dp"
        android:layout_height="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </com.google.android.material.tabs.TabLayout>

    <Switch
        android:id="@+id/AllowEditing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="2dp"
        android:text="Allow Editing"
        app:layout_constraintBottom_toTopOf="@+id/ConfirmEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordPager"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>

